--- a/report/References.bib
+++ b/report/References.bib
@@ -562,3 +562,16 @@ keywords = {video coding;  classification;  deep learning;  Computer architectur
       year = "2019",
       url = "https://github.com/BunmiA/msc-exploring-neural-networks"
 }
+
+@ARTICLE{6296535,
+author={L. {Deng}},
+journal={IEEE Signal Processing Magazine},
+title={The MNIST Database of Handwritten Digit Images for Machine Learning Research [Best of the Web]},
+year={2012},
+volume={29},
+number={6},
+pages={141-142},
+keywords={handwriting recognition;learning (artificial intelligence);optical character recognition;visual databases;MNIST database;handwritten digit images;machine learning research;Best of the Web;modified national institute of standards and technology;optical character recognition;Machine learning},
+doi={10.1109/MSP.2012.2211477},
+ISSN={},
+month={Nov},}
