--- a/report/Conclusions.tex
+++ b/report/Conclusions.tex
@@ -1,7 +1,10 @@
-\chapter{General Conclusions}
-\label{chapterlabel4}
+\chapter{Conclusions}
+\label{conclusion}
 
-    \section{Conclusion}
-  From the implementing these models it is clear to see how the tensorflow and keras API truly provide an user friendly and efficient way of implementing these models.
-  There is still improvements to be made to made such as a random cropping frunction in the augumentation libary.
-  One observations is the superiority of the batch normalization over local response normalization which as discussed \citep{ioffe2015batch}  is set to allow about 14 times fewer training steps.
+From implementing various models, TensorFlow and Keras API truly provide a user-friendly and efficient way of implementing these models through the already built-in functions and methods such as the Keras layers and models building tools functionality.  Other benefits of these frameworks is how easily customized methods functionality can be added, how it allows for easy used of pre-trained models and how effortless the frameworks work together. 
+ 
+In terms of the performance of the constructed models from \citep{KarpathyCVPR14}, it is clear to see that there can be difficulties in reproducing model performance, especially when using a different dataset. As this will require a different set of optimization methods and hyperparameters.  Also, in order to get great performances from pre-trained models;  a vast amount of fine tuning of the hyperparameters and regularization techniques are required.
+
+Exploring these hyperparameters will be the next step to the project. This will involve exploring what tools,  can be used with TensorFlow and Keras to explore hyperparameters more systematically and efficiently. Overall, in terms of model design, an orthogonal approach should have been taken, looking at architecture performance then optimization fully. 
+
+As for the used of temporal features, nothing conclusive was decided as all models required better optimization and regularization to help with overfitting. However, a possible theory is that a single frame model is just as efficient as other models considering temporal features. Moreover, it can be even more efficient if trained with frames at different points in time from different videos. Another next step from this project will be to also look into Recurrent neural networks which are designed to look at sequence data which are inclusive of videos. 
