--- a/report/Main_.tex
+++ b/report/Main_.tex
@@ -77,7 +77,7 @@
 \usepackage{listings}
 
 \usepackage{xcolor}
-\usepackage{amsmath}
+%\usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
  
@@ -139,12 +139,13 @@
 %  *must not* include spaces.
 \include{Preamble}
 \include{Introduction}
-\include{Overview}
+\include{Theory}
+\include{Setup}
 \include{Coding}
 \include{Experiment}
 \include{Results}
 \include{Conclusions}
-\include{Appendices} 
+% \include{Appendices} 
 % You could separate these out into different files if you have
 %  particularly large appendices.
 
